--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,26 @@
-*~
-*.swp
 *.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
 *.bbl
 *.blg
 *.dvi
-*.log
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
 *.pdf
+*.bkp
+
